[gd_scene load_steps=7 format=1]

[ext_resource path="res://console.gd" type="Script" id=1]
[ext_resource path="res://fnt/hack_italic.fnt" type="Font" id=2]
[ext_resource path="res://fnt/hack_bold.fnt" type="Font" id=3]
[ext_resource path="res://fnt/hack_regular.fnt" type="Font" id=4]
[ext_resource path="res://consolebutton_up.png" type="Texture" id=5]
[ext_resource path="res://consolebutton_down.png" type="Texture" id=6]

[node name="Main" type="Node2D"]

[node name="Console" type="PanelContainer" parent="."]

visibility/blend_mode = 2
anchor/right = 1
margin/top = -256.0
margin/right = -691.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
script/script = ExtResource( 1 )

[node name="box" type="VBoxContainer" parent="Console"]

margin/left = 4.0
margin/top = 8.0
margin/right = 751.0
margin/bottom = 252.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
alignment = 0

[node name="out" type="RichTextLabel" parent="Console/box"]

margin/right = 747.0
margin/bottom = 187.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="in" type="LineEdit" parent="Console/box"]

margin/top = 191.0
margin/right = 747.0
margin/bottom = 215.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
custom_fonts/font = ExtResource( 4 )
text = ""
max_length = 0
editable = true
secret = false

[node name="HSeparator" type="HSeparator" parent="Console/box"]

margin/top = 219.0
margin/right = 747.0
margin/bottom = 222.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2

[node name="status" type="HBoxContainer" parent="Console/box"]

margin/top = 226.0
margin/right = 747.0
margin/bottom = 244.0
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
alignment = 0

[node name="toggle" type="TextureButton" parent="Console/box/status"]

margin/right = 18.0
margin/bottom = 18.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = true
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )

[node name="clock" type="Label" parent="Console/box/status"]

margin/left = 22.0
margin/top = 2.0
margin/right = 382.0
margin/bottom = 16.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "SPACE WIZARD v0.1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="version" type="Label" parent="Console/box/status"]

margin/left = 386.0
margin/top = 2.0
margin/right = 747.0
margin/bottom = 16.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "SPACE WIZARD v0.1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="tick" type="Timer" parent="Console"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[connection signal="text_entered" from="Console/box/in" to="Console" method="_on_in_text_entered"]

[connection signal="toggled" from="Console/box/status/toggle" to="Console" method="_on_toggle_toggled"]

[connection signal="timeout" from="Console/tick" to="Console" method="_tick"]


